# win-manager

./: .gitignore  CLAUDE.md  CLI_ARCHITECTURE.md  CLI_USAGE_GUIDE.md  README.md  demo_usage.py  pyproject.toml  quick_demo.py  test_cli_basic.py  test_cli_simple.py
docs/: PROJECT_STATUS.md  navigation.md
docs/contributor/: coding-standards.md  development-setup.md
docs/developer/: api-reference.md  architecture.md  configuration.md  core-modules.md  layout-system.md  performance.md
docs/reference/: acknowledgments.md  changelog.md  license.md
docs/user/: cli-reference.md  installation.md  quickstart.md
src/win_manager/: __init__.py  main.py
src/win_manager/cli/: __init__.py  main.py
src/win_manager/cli/commands/: __init__.py  config.py  hotkey.py  layout.py  tool.py  window.py
src/win_manager/cli/config/: __init__.py  cli_config.py
src/win_manager/cli/utils/: __init__.py  helpers.py  output.py  validation.py
src/win_manager/core/: __init__.py  config_manager.py  layout_manager.py  window_controller.py  window_detector.py  window_manager.py
src/win_manager/layouts/: __init__.py
src/win_manager/ui/: __init__.py
src/win_manager/utils/: __init__.py  exception_handler.py  hotkey_manager.py
tests/: test_basic.py  test_cli.py  test_config_manager.py  test_exception_handler.py  test_hotkey_manager.py  test_integration.py  test_layout_manager.py  test_performance.py  test_window_controller.py  test_window_detector.py  test_window_manager.py
